# StarNEig

./: .gitignore  .gitmodules  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  KNOWN_PROBLEMS.md  LICENSE  LICENSE.md  PUBLICATION.md  PUBLICATIONS.md  README.md  _config.yml  index.md  version.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: base_tests.yml  codeql-analysis.yml  manual.yml  tests.yml  version.yml
docs/: CMakeLists.txt  Doxyfile.in  README.md  _0_introduction.md  _1_installation.md  _1_status.md  _2_basics.md  _2_eigenvalue_problems.md  _2_initialization.md  _2_installation.md  _3_distributed_memory.md  _4_standard.md  _5_generalized.md  _6_expert.md  _6_generalized.md  _7_test_driver.md  _8_license.md  publications.in
examples/: CMakeLists.txt  README.md  gep_dm_full_chain.c  gep_sm_eigenvectors.c  gep_sm_full_chain.c  sep_dm_full_chain.c  sep_sm_eigenvectors.c  sep_sm_full_chain.c  validate.c  validate.h
master/html/: annotated.html  blacs__helpers_8h.html  blacs__helpers_8h.js  blacs__helpers_8h_source.html  blacs__matrix_8h.html  blacs__matrix_8h.js  blacs__matrix_8h_source.html  classes.html  configuration_8h.html  configuration_8h_source.html  deprecated.html  dir_04822090a6243f78f0175e921d0bf30b.html  dir_06bdf7dd1a0d90541d8ca28d5f4cc384.html  dir_d44c64559bbebec7f509842c48db8b23.html  distr__helpers_8h.html  distr__helpers_8h.js  distr__helpers_8h_source.html  distr__matrix_8h.html  distr__matrix_8h.js  distr__matrix_8h_source.html  error_8h.html  error_8h_source.html  examples.html  expert_8h.html  expert_8h.js  expert_8h_source.html  files.html  files_dup.js  functions.html  functions_vars.html  gep__dm_8h.html  gep__dm_8h_source.html  gep__sm_8h.html  gep__sm_8h.js  gep__sm_8h_source.html  gep_dm_full_chain_8c-example.html  gep_sm_eigenvectors_8c-example.html  gep_sm_full_chain_8c-example.html  globals.html  globals_defs.html  (+66 more)
misc/: valgrind.supp
misc/event_parser/: CMakeLists.txt  parse.cpp
src/: CMakeLists.txt  starneig.pc.in  starneig_config.h.in
src/common/: combined.c  common.c  common.h  cpu.c  cpu.h  cuda.cu  cuda.h  cuda_cleanup.c  cuda_cleanup.h  helpers.c  math.c  math.h  matrix.c  matrix.h  node.c  node_internal.h  sanity.h  scratch.c  scratch.h  tasks.c  tasks.h  tiles.c  tiles.cu  tiles.h  trace.c  trace.h  utils.c  utils.h  vector.c  vector.h
src/eigenvectors/generalized/: blocking.c  blocking.h  common.c  common.h  geig.c  geig.h  interface.c  irobust-geig.c  irobust-geig.h  irobust.c  irobust.h  robust-geig.c  robust-geig.h  robust.c  robust.h  sirobust-geig.c  sirobust-geig.h  tiling.c  tiling.h  utils.c  utils.h
src/eigenvectors/standard/: core.c  core.h  cpu.c  cpu.h  interface.c  partition.c  partition.h  robust.c  robust.h  tasks.c  tasks.h  typedefs.h
src/hessenberg/: core.c  core.h  cpu.c  cpu.h  cuda.cu  cuda.h  cuda_cleanup.c  cuda_cleanup.h  interface.c  tasks.c  tasks.h
src/hessenberg/internal/: core.c  core.h  cpu.c  cuda.cu  cuda.h  tasks.c  tasks.h
src/include/starneig/: blacs_helpers.h  blacs_matrix.h  configuration.h.in  distr_helpers.h  distr_matrix.h  error.h  expert.h  gep_dm.h  gep_sm.h  node.h  sep_dm.h  sep_sm.h  starneig.h.in
src/mpi/: blacs_helpers.c  blacs_matrix.c  combined.c  distr_matrix.c  distr_matrix_internal.h  helpers.c  interface_hessenberg.c  interface_reorder.c  interface_schur.c  node.c  node_internal.h  utils.c  utils.h
src/reorder/: common.h  core.c  core.h  cpu.c  cpu.h  cuda.cu  cuda.h  insert_engine.c  insert_engine.h  interface.c  lapack.c  lapack.h  plan.c  plan.h  tasks.c  tasks.h  window.c  window.h
src/schur/: common.h  core.c  core.h  cpu.c  cpu.h  cpu_utils.c  cpu_utils.h  interface.c  process_args.c  process_args.h  segment.c  segment.h  tasks.c  tasks.h
src/wrappers/: common.c  common.h  lapack.c  scalapack.c
src/wrappers/pdgghrd/: ACCUMULATEROWROTATIONS.f  BLOCKSLIVERCOLUMNUPDATE.f90  DUOBLOCKSLIVERCOLUMNUPDATE.f90  GRN2LRN.f  KRNLACCUMULATECOLUMNROTATIONS.f  KRNLCOLUMNANNIHILATE.f  KRNLROWUPDATE.f  KRNLUPDATEANDREDUCECOLUMN.f  SLIVERROWUPDATE.f90  UPDATEANDREDUCECOLUMN_ROOT.f
test/: CMakeLists.txt  main.c  starneig_test_config.h.in
test/common/: block_placer.c  block_placer.h  checks.c  checks.h  common.c  common.h  complex_distr.c  complex_distr.h  crawler.c  crawler.h  data.h  experiment.h  hook_converter.h  hook_experiment.c  hook_experiment.h  hooks.c  hooks.h  init.c  init.h  init_schur.c  init_schur.h  io.c  io.h  local_pencil.c  local_pencil.h  parse.c  parse.h  pencil.c  pencil.h  select_distr.c  select_distr.h  starneig_pencil.c  starneig_pencil.h  supplementary.c  supplementary.h  threads.c  threads.h
test/eigenvectors/: experiment.c  experiment.h  solvers.c  solvers.h
test/hessenberg/: experiment.c  experiment.h  solvers.c  solvers.h
test/misc/: full_chain.c  full_chain.h  partial_hessenberg.c  partial_hessenberg.h  validator.c  validator.h
test/reorder/: experiment.c  experiment.h  solvers.c  solvers.h
test/schur/: experiment.c  experiment.h  solvers.c  solvers.h
v0.1-beta.1/html/: annotated.html  blacs__helpers_8h.html  blacs__helpers_8h_source.html  blacs__matrix_8h.html  blacs__matrix_8h_source.html  classes.html  configuration_8h.html  configuration_8h.js  configuration_8h_source.html  dir_06bdf7dd1a0d90541d8ca28d5f4cc384.html  dir_d44c64559bbebec7f509842c48db8b23.html  distr__matrix_8h.html  distr__matrix_8h_source.html  error_8h.html  error_8h_source.html  examples.html  expert_8h.html  expert_8h_source.html  files.html  formula.repository  functions.html  functions_vars.html  gep__dm_8h.html  gep__dm_8h_source.html  gep__sm_8h.html  gep__sm_8h_source.html  gep_dm_full_chain_8c-example.html  gep_sm_eigenvectors_8c-example.html  gep_sm_full_chain_8c-example.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  group__starneig__conf.html  group__starneig__dm__blacs.html  group__starneig__dm__blacs__helpers.html  group__starneig__dm__gep.html  (+35 more)
v0.1-beta.2/html/: annotated.html  blacs__helpers_8h.html  (+71 more)
(+1290 files in other folders)
